# pykosmospp

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  GITHUB_DEPLOYMENT.md  KNOWN_ISSUES.md  PHASE8_COMPLETION.md  PHASE8_SUMMARY.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: docs.yml
.specify/memory/: constitution.md  learning-resources-catalog.md
config/: kosmos_defaults.yaml
docs/: API.md  FUTURE_ENHANCEMENTS.md  README.md  READTHEDOCS_SETUP.md  edge_clipping.md  requirements.txt  wavelength_calibration_guide.md
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst
docs/source/algorithms/: cosmic_ray_detection.rst  optimal_extraction.rst  trace_detection.rst  wavelength_fitting.rst
docs/source/api/: calibration.rst  extraction.rst  models.rst  quality.rst  wavelength.rst
docs/source/tutorials/: interactive_tutorial.rst
docs/source/user_guide/: cli.rst  configuration.rst  output_products.rst  python_api.rst
examples/: README.md  tutorial.ipynb
examples/data/: .gitkeep
resources/: README.md
resources/pykosmos_reference/: README.md
specs/001-galaxy-spec-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-galaxy-spec-pipeline/checklists/: clarification-coverage.md  requirements.md
specs/001-galaxy-spec-pipeline/contracts/: cli-spec.yaml  config-schema.yaml
src/: __init__.py  cli.py  models.py  pipeline.py
src/calibration/: __init__.py  bias.py  combine.py  cosmic.py  flat.py
src/extraction/: __init__.py  extract.py  profile.py  sky.py  trace.py
src/flux_calibration/: __init__.py  extinction.py  sensitivity.py
src/io/: __init__.py  config.py  fits.py  logging.py  organize.py
src/quality/: __init__.py  detector_artifacts.py  metrics.py  plots.py  validate.py
src/wavelength/: __init__.py  apply.py  dtw.py  fit.py  identify.py  match.py
tests/: __init__.py  test_extraction.py  test_integration.py  test_quality.py  test_wavelength.py
tests/fixtures/: __init__.py  synthetic_data.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_calibration.py  test_extraction.py  test_quality.py  test_wavelength.py  test_wavelength_dtw.py
