[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykosmospp"
version = "0.2.1"
description = "APO-KOSMOS Galaxy Spectroscopy Reduction Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "APO KOSMOS Team"}
]
keywords = ["astronomy", "spectroscopy", "KOSMOS", "APO", "data reduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astropy>=5.3",
    "specutils>=1.10",
    "scipy>=1.10",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "pyyaml>=6.0",
    "dtw-python>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-astropy>=0.10",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]

[project.scripts]
kosmos-reduce = "pykosmospp.cli:main"

[tool.setuptools]
packages = ["pykosmospp"]

[tool.setuptools.package-dir]
pykosmospp = "src"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
